# build_openvas

./: CMakeLists.txt  COPYING  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FIRE_MARSHAL_INTEGRATION.md  GIT_COMMIT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PULL_REQUEST.md  PYRO_MCP_INTEGRATION.md  PYTHON_MIGRATION_STATUS.md  PYTHON_RUST_MIGRATION_COMPLETE.md  PYTHON_TO_RUST_GAP_ANALYSIS.md  QA_REPORT.md  QUICKSTART.md  README-CRYPTEX.md  README.md  RELEASE_NOTES.md  RUST_NAPI_ITERATION_STATUS.md  RUST_STACK_GAP_ANALYSIS.md  SDLC_ITERATION_SUMMARY.md  STATUS.md  build.ps1  config.h.in  cryptex-launcher.ps1  cryptex-launcher.sh  deploy-openvas-latex-reporting.ps1  deploy.bat  docker-compose.yml  install-cryptex.sh  install.ps1  install_cross_platform.sh  mcp_servers.json  quick-deploy.ps1  setup_forks.ps1  setup_forks.sh  setup_pyro_integration.sh
ai-engine/: CMakeLists.txt  ai-engine.pc.in
ai-engine/api/: ai_service.c  ai_service.h
ai-engine/config/: ai_config_manager.c  ai_config_manager.h
ai-engine/integration/: scanner_bridge.c  scanner_bridge.h
ai-engine/monitoring/: ai_metrics.h
ai-engine/providers/: openai_provider.c
ai-engine/scoring/: external_data_sources.c  vulnerability_scoring.c  vulnerability_scoring.h
ai-engine/security/: ai_security.h
cryptex/: .dockerignore  .gitignore  API_REFERENCE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.api  Dockerfile.mcp  PROJECT_COMPLETION.md  PYRO_INTEGRATION.md  README.md  build-all-platforms.ps1  build-all-platforms.sh  cryptex-config.example.toml  openfire-config.toml  quickstart.sh  test_mcp.sh
cryptex-desktop/: .gitignore  API_OPTIMIZATION.md  README.md  STACK_ARCHITECTURE.md  THEME_GUIDE.md  index.html  package.json  tsconfig.json  vite.config.ts
cryptex-desktop/src/: App.svelte  app.css
cryptex-desktop/src-tauri/: Cargo.toml  tauri.conf.json
cryptex-desktop/src-tauri/src/: api_server.rs  commands.rs  database.rs  main.rs
cryptex-desktop/src/components/: Sidebar.svelte  TopBar.svelte
cryptex-desktop/src/views/: Configuration.svelte  Dashboard.svelte  Reports.svelte  Results.svelte  Scans.svelte  Targets.svelte
cryptex-visualizer/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cryptex-visualizer/src/: App.svelte  app.css  main.ts  module.ts
cryptex-visualizer/src/components/: Dashboard.svelte  Header.svelte  ReportView.svelte  ScanView.svelte  VulnerabilityList.svelte
cryptex-visualizer/src/services/: api.ts  websocket.ts
cryptex/.github/workflows/: ci.yml
cryptex/crates/cryptex_napi/: Cargo.toml  index.d.ts  index.js  package.json
cryptex/crates/cryptex_napi/src/: lib.rs
cryptex/crates/cryptex_unified/: Cargo.toml
cryptex/crates/cryptex_unified/src/: main.rs
cryptex/crates/pyro_integration_helper/: Cargo.toml  README.md
cryptex/crates/pyro_integration_helper/src/: main.rs
cryptex/crates/the_agitator/: Cargo.toml
cryptex/crates/the_agitator/src/: claude.rs  lib.rs  openai.rs
cryptex/crates/the_archive/: Cargo.toml
cryptex/crates/the_archive/src/: lib.rs
cryptex/crates/the_archive_query/: Cargo.toml
cryptex/crates/the_archive_query/src/: lib.rs
cryptex/crates/the_assessor/: Cargo.toml
cryptex/crates/the_assessor/src/: cvss.rs  lib.rs  scoring.rs  types.rs
cryptex/crates/the_collective/: Cargo.toml
cryptex/crates/the_collective/src/: error.rs  lib.rs
cryptex/crates/the_collective/src/api/: mod.rs
cryptex/crates/the_collective/src/memory/: mod.rs
cryptex/crates/the_collective/src/observer/: mod.rs
cryptex/crates/the_commune/: Cargo.toml
cryptex/crates/the_commune/src/: main.rs
cryptex/crates/the_coordinator/: Cargo.toml
cryptex/crates/the_coordinator/src/: lib.rs
cryptex/crates/the_foundation/: Cargo.toml
cryptex/crates/the_foundation/src/: error.rs  lib.rs  models.rs  platform.rs  traits.rs
cryptex/crates/the_gateway/: Cargo.toml
cryptex/crates/the_gateway/src/: main.rs
cryptex/crates/the_infiltrator/: Cargo.toml
cryptex/crates/the_infiltrator/src/: context.rs  lib.rs  scanner.rs  types.rs
cryptex/crates/the_interface/: Cargo.toml
cryptex/crates/the_interface/src/: lib.rs
cryptex/crates/the_propagandist/: Cargo.toml
cryptex/crates/the_propagandist/src/: formats.rs  generator.rs  lib.rs
deployment/scripts/: detect_os.sh  install_dependencies.ps1  install_dependencies.sh
docs/: ARCHITECTURE_ANALYSIS.md  DATA_SOURCE_INTEGRATION.md  DEVELOPMENT_GUIDE.md  LATEX_REPORTING_IMPLEMENTATION_SPEC.md  PRODUCTION_DEPLOYMENT.md  QA_UA_TESTING_PLAN.md  UAT_KALI_WSL_TESTING_PLAN.md  UAT_TEST_SCENARIOS.md  UAT_UBUNTU_TESTING_PLAN.md  VULNERABILITY_DATA_INTEGRATION_SUMMARY.md  VULNERABILITY_SCORING.md
examples/: CMakeLists.txt  README_EXAMPLES.md  ai_vulnerability_demo.c  latex_report_demo.c  scanner_integration_demo.c
gui/: README.md  index.html  server.py
gui/css/: components.css  styles.css
gui/js/: api.js  app.js  charts.js  components.js
nginx/: nginx.conf
node-red/: flows.json
node-red-cryptex/: README.md  package.json
node-red-cryptex/nodes/: assess.js  config.js  kev.js  report.js  scan.js
plugins/: CMakeLists.txt
plugins/report-generation/: CMakeLists.txt  README.md
plugins/report-generation/src/: latex_engine.c  latex_engine.h  report_api.c  report_api.h  template_manager.h
plugins/report-generation/templates/executive/: executive_summary.tex  metadata.json
plugins/report-generation/tests/: test_latex_engine_comprehensive.c  test_performance_benchmarks.c  test_report_generation.c  test_security_comprehensive.c
plugins/vulnerability-analysis/: ai_vuln_analyzer.c  ai_vuln_analyzer.h
scripts/: 01_creategvm.sh  02_mkdirs.sh
steering/: 00_GAP_ANALYSIS.md  00_README.md  01_CRYPTEX_DICTIONARY.md  02_MCP_SERVER_SPECIFICATION.md  03_FUNCTION_MAPPING_CRYPTEX.md  04_RUST_CONVERSION_ROADMAP.md  05_FRONTEND_ARCHITECTURE.md  06_DATA_ARCHITECTURE.md
tests/: CMakeLists.txt  test_ai_service.c  test_integration.c  test_production_ready.c  test_vulnerability_scoring.c
(+4 files in other folders)
