[workspace]
members = [
    "crates/the_collective",
    "crates/the_agitator",
    "crates/the_assessor",
    "crates/the_infiltrator",
    "crates/the_propagandist",
    "crates/the_archive",
    "crates/the_interface",
    "crates/the_coordinator",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Anarchist Rust Collective"]
license = "GPL-2.0-or-later"
repository = "https://github.com/Ununp3ntium115/build_openvas"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# HTTP Client & Server
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = "1.0"

# Database
redb = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
mockall = "0.12"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
