[package]
name = "the_agitator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Agitator - AI Provider Integrations for CRYPTEX"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
the_foundation = { path = "../the_foundation" }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
