[package]
name = "the_archive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Archive - Embedded Database Layer for CRYPTEX"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
redb = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

the_foundation = { path = "../the_foundation" }
the_assessor = { path = "../the_assessor" }
the_infiltrator = { path = "../the_infiltrator" }

[dev-dependencies]
tempfile = "3.8"
