[package]
name = "the_propagandist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Propagandist - Report Generation for CRYPTEX"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Internal dependencies
the_foundation = { path = "../the_foundation" }
the_assessor = { path = "../the_assessor" }
the_infiltrator = { path = "../the_infiltrator" }

[dev-dependencies]
tokio-test = "0.4"
